[workspace]

[workspace.package]
version = "0.1.0"
edition = "2021"

[package]
name = "diff-explore"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.25"
chrono = "0.4.23"
tui = { workspace = true }
list_helper_macro = { path = "list_helper/macro" }
list_helper_core = { path = "list_helper/core" }

[workspace.dependencies]
tui = "0.19"
