[package]
name = "diff-explore"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27"
chrono = "0.4.23"
once_cell = "1.16.0"
notify = "6.1.1"
regex = "1.7.0"
ratatui = "0.26.1"
tracing-error = "0.2.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
directories = "5.0.1"
lazy_static = "1.4.0"

[[bin]]
name = "de"
path = "src/main.rs"
